--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "nodemon app.js"
+  },
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -8,6 +11,7 @@
   },
   "devDependencies": {
     "dotenv-cli": "^7.2.1",
+    "nodemon": "^2.0.22",
     "sqlite3": "^5.1.6"
   }
 }
