added secret key instructions to .env

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,4 @@
+# access environment variables using process.env.VARIABLE_NAME
 DB_FILE=/route/to/db_file.db
 PORT=port_number
+SECRET_KEY=require('crypto').randomBytes(64).toString('hex')
