--- a/package.json
+++ b/package.json
@@ -1,5 +1,85 @@
 {
+  "name": "gettogather",
+  "version": "1.0.0",
+  "description": "## Database Schema Design",
+  "main": "index.js",
   "dependencies": {
-    "bcrypt": "^5.1.0"
-  }
+    "abbrev": "^1.1.1",
+    "ansi-regex": "^5.0.1",
+    "are-we-there-yet": "^2.0.0",
+    "aproba": "^2.0.0",
+    "bcrypt": "^5.1.0",
+    "brace-expansion": "^1.1.11",
+    "balanced-match": "^1.0.2",
+    "chownr": "^2.0.0",
+    "concat-map": "^0.0.1",
+    "console-control-strings": "^1.1.0",
+    "color-support": "^1.1.3",
+    "agent-base": "^6.0.2",
+    "emoji-regex": "^8.0.0",
+    "debug": "^4.3.4",
+    "delegates": "^1.0.0",
+    "fs.realpath": "^1.0.0",
+    "fs-minipass": "^2.1.0",
+    "gauge": "^3.0.2",
+    "glob": "^7.2.3",
+    "inherits": "^2.0.4",
+    "has-unicode": "^2.0.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "inflight": "^1.0.6",
+    "https-proxy-agent": "^5.0.1",
+    "make-dir": "^3.1.0",
+    "minimatch": "^3.1.2",
+    "minipass": "^5.0.0",
+    "lru-cache": "^6.0.0",
+    "minizlib": "^2.1.2",
+    "mkdirp": "^1.0.4",
+    "node-addon-api": "^5.1.0",
+    "ms": "^2.1.2",
+    "node-fetch": "^2.6.10",
+    "nopt": "^5.0.0",
+    "npmlog": "^5.0.1",
+    "detect-libc": "^2.0.1",
+    "object-assign": "^4.1.1",
+    "path-is-absolute": "^1.0.1",
+    "once": "^1.4.0",
+    "readable-stream": "^3.6.2",
+    "rimraf": "^3.0.2",
+    "safe-buffer": "^5.2.1",
+    "semver": "^7.5.0",
+    "set-blocking": "^2.0.0",
+    "signal-exit": "^3.0.7",
+    "tar": "^6.1.14",
+    "tr46": "^0.0.3",
+    "string-width": "^4.2.3",
+    "util-deprecate": "^1.0.2",
+    "webidl-conversions": "^3.0.1",
+    "wide-align": "^1.1.5",
+    "string_decoder": "^1.3.0",
+    "wrappy": "^1.0.2",
+    "strip-ansi": "^6.0.1",
+    "yallist": "^4.0.0",
+    "whatwg-url": "^5.0.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "npm --prefix backend install backend",
+    "dev:backend": "npm install --prefix backend start",
+    "sequelize": "npm run --prefix backend sequelize",
+    "sequelize-cli": "npm run --prefix backend sequelize-cli",
+    "start": "npm start --prefix backend",
+    "build": "npm run --prefix backend build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ansorokey/GetToGather.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ansorokey/GetToGather/issues"
+  },
+  "homepage": "https://github.com/ansorokey/GetToGather#readme"
 }
